# dotfile

./: .gitattributes  .gitignore  README.md  go.sh
Mac-os-icon-main/: README.md  run  run-new
Mac-os-icon-main/icons/: CMake.icns  CodeLite.icns  Firefox.icns  Inkscape.icns  Sql.icns  Wiregurd.icns  wx.icns
debian/suckless/: install.sh
dirwin_os/: .alias.zsh  .bashrc  .zshrc  Brewfile  Makefile  README.md  __GUI-application-lists.txt  __binPackageInstall.sh  __fonts-lists.txt  __installed-Lib-sdk.txt  alias.zsh  bashrc.bash  binPackageBackup.sh  config.toml  curlrc  defaults.write.sh  exportlib.sh  fonts-lists.txt  functions.sh  install.sh  instlalFonts.sh  main.c  myProfile.terminal  set_up.sh  sudo  sudo_su-bashrc  sudo_su-bashrc.sh  updateNNN.sh  wgetrc  zshenv  zshrc  zshrc.zsh
dirwin_os/.config/aria2/: aria2.conf
dirwin_os/.config/bat/: config
dirwin_os/.config/broot/launcher/bash/: br
dirwin_os/.config/btop/: btop.conf  btop.conf-bak
dirwin_os/.config/htop/: htoprc
dirwin_os/.config/lf/: icons  lfrc  pv.sh
dirwin_os/.config/ncdu/: config
dirwin_os/.config/neo_vim/: init.lua  init.vim
dirwin_os/.config/nvim/: init.lua  init.vim
dirwin_os/.config/radare2/: rc
dirwin_os/.config/ripgrep/: config
dirwin_os/.config/tig/: config  config.toml
dirwin_os/.config/yt-dlp/: config  instagram.txt  you-tube_playlist.txt  you-tube_short_vidoe.txt  you-tube_single_vidoe.txt
dirwin_os/.config/zed/: keymap.json  settings.json  tasks.json
dirwin_os/backupScripts/: __back_data.txt  __bin_command_urls.txt  exportLib.py  install_bin_command.py  packageDataBackup.py  updateFfmpeg.py  updateNNN.sh
dirwin_os/binary/: typst-live  urlview
dirwin_os/config/aria2/: README.md  aria2-launchctl.conf  aria2.conf  com.user.aria2.plist
dirwin_os/config/aria2/script/: launchctl-completed.sh  main_script.sh  see_aria2_hisoty.sql  sql_history_structure.sql  update_bt_tracker.sh  write_history.sh
dirwin_os/config/bat/: config
dirwin_os/config/broot/: conf.hjson  verbs.hjson
dirwin_os/config/btop/: .gitignore  btop.conf-bak
dirwin_os/config/fzf/: config
dirwin_os/config/git/: git_diff_binary_files  gitattributes  gitconfig  gitignore_globle
dirwin_os/config/helix/: config.toml
dirwin_os/config/homebrew/: brew.env
dirwin_os/config/joshuto/: joshuto.toml  keymap.toml  mimetype.toml  theme.toml
dirwin_os/config/lf/: lfrc  pv.sh
dirwin_os/config/mpv/: input.conf  mplayer-input.conf  mpv.conf
dirwin_os/config/navi/: config.yaml
dirwin_os/config/navidrome/: navidrome.toml
dirwin_os/config/newsboat/: config  urls
dirwin_os/config/newsboat/scripts/: list-link.sh
dirwin_os/config/nnn/: nnn_install_plugins.sh
dirwin_os/config/nnn/patchs/: icons-v5.2.patch  nnn_keybinds-v5.patch
dirwin_os/config/nnn/plugins/: adb_push  fetch_metadata  fix_ugly_name
dirwin_os/config/npm/: npmrc
dirwin_os/config/nvim/: init.lua
dirwin_os/config/pandoc/: installStyleData.sh
dirwin_os/config/rclone/backup_scripts/: syncLocalfiles.py  sync_data.json  sync_data_sample.json
dirwin_os/config/rclone/excludes/: shiori.txt
dirwin_os/config/readeck/: config.toml
dirwin_os/config/ripgrep/: config
dirwin_os/config/shiori/: README.md  local.app.shiori.plist
dirwin_os/config/tidy/: tidyrc-xml
dirwin_os/config/tig/: config
dirwin_os/config/yt-dlp/: config  you-tube_short_vidoe.txt
dirwin_os/config/yt-dlp/aria2_script/: write_history.sh
dirwin_os/config/yt-dlp/orion_browser/: yt-dlp-orion-terminal.applescript  yt-dlp_orion-terminal.applescript  yt-dlp_orion-terminal.sh  yt-dlp_with_orion_browser.applescript  yt-dlp_with_orion_browser.sh
dirwin_os/config/zed/: settings.json  tasks.json
dirwin_os/config/zsh/: .gitignore  alias.zsh  functions.sh  zprofile.zsh  zshenv-footer.zsh  zshenv.zsh  zshrc.zsh
dirwin_os/scripts/: about_github_repo.py  comp.sh  fontify.py  gDrive.sh  notify.sh
global/: .links  age  age.py  mv_c.c  nnn.h  nnn_help.txt  osm.py  phone_rec.mk  ruff.toml  taplo.toml  vim_key.txt
global/c-cpp-template/: CMakeLists.txt  clang-format  swift-format
global/c-cpp-template/c/: .clangd  CMakeLists.txt
global/c-cpp-template/c++/: CMakeLists.txt  REFERENCES.md
global/c-cpp-template/c++/.zed/: settings.json
global/c-cpp-template/c++/doc/: CMakeLists.txt  Doxyfe.txt  Doxyfile.in
global/c-cpp-template/c/tests/: CMakeLists.txt  main.c
global/compile/: age_cal.c
global/embedded/arduino-cli-uno/: REFERENCES.md
global/embedded/free-RTOS-teamplate-rp2040/: CMakeLists.txt  REFERENCES.md
global/embedded/pick-sdk-poroject-template-rp2040/: .clangd  CMakeLists.txt  REFERENCES.md
global/phone/: Makefile  phone  rec.py
global/practice/: dictation.py
global/shiori-bookMark/: config.txt  shiori.db
global/user_c_lib/: batchRename.c  pathenv.c  user_function.h.pch
global/vscode/: CMakeLists.txt  Makefile  clang-format  clangd-c  clangd-cxx  leetcode.mk
global/vscode/C/: launch.json  tasks.json
global/vscode/CXX/: c_cpp_properties.json  launch.json  tasks.json
global/vscode/c/: .clangd  CMakeLists.txt
global/vscode/c++/: .clang-format  .clangd  CMakeLists.txt  Makefile
global/vscode/c++/.zed/: settings.json  tasks.json
global/vscode/c++/doc/: CMakeLists.txt  Doxyfile.in
global/vscode/c++/src/: functions.cpp  functions.hpp  main.cpp
global/vscode/c++/test/: CMakeLists.txt  main.cpp
global/vscode/c++/test/src/: CmakeConfig.h.in  main.cpp
global/vscode/c++/tests/: CMakeLists.txt  main.cpp
global/vscode/c/src/: CmakeConfig.h.in  main.c
global/vscode/c/test/: main.c
global/vscode/c/tests/: CMakeLists.txt
icon_inkscape/: Pi.icns  new.icns  new.sh  run.sh
windows/: Adobe_Pr.ahk  Basic_Script.ahk  Sound_Control.ahk  Test.ahk
